<resources>
    <string name="app_name">EltonGuitar</string>
    <string name="login_title">登入</string>
    <string name="search_for">search...</string>
    <string name="login_mail_label">信箱</string>
    <string name="login_password_label">密碼</string>
    <string name="login_button">登入</string>
    <string name="register_button">註冊</string>
    <string name="request_title">求譜專區</string>
    <string name="member_title">會員</string>
    <string name="requestNameLabel">歌曲名稱</string>
    <string name="requestSingerLabel">歌手名稱</string>
    <string name="requestSongUrlLabel">歌曲連結</string>
    <string name="requestLyricUrlLabel">歌詞連結</string>
    <string name="btnRequestSubmit">送出</string>
</resources>
